# lamp

./: Cargo.toml  LICENSE  TODO
lamp_asm_parser/: Cargo.toml
lamp_asm_parser/src/: lexer.rs  tests.rs
lamp_assembler/: Cargo.toml
lamp_assembler/src/: compiler.rs  main.rs
lamp_common/: Cargo.toml
lamp_common/src/: lib.rs  op.rs
lamp_vm/: Cargo.toml  README.md
lamp_vm/src/: main.rs
lamp_vm/src/base/: mod.rs  opcodes.rs  vm.rs
lamp_vm/src/debug/: mod.rs  session.rs
lamp_vm/src/debug/commands/: command_base.rs  mod.rs  regdump.rs  setpc.rs  step.rs
lamp_vm/src/tests/: mod.rs  vm_test.rs
