[package]
name = "lamp_vm"
description = "Lamp Virtual Machine"
version = "0.1.0"
authors = ["Quentincestino <quentindutilleul@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamp_common = { path = "../lamp_common" }
log = "0.4.11"
simple_logger = "1.6.0"
structopt = "0.3"